polls/static/polls/public.css
body {
    background-color: #EBEBEB;
}


#filters {
    text-align: center;
}

#refine-btn {
    margin-left: 10px;
}

#polls {
    text-align: center;
    position: absolute;
    width: 50%;
    height: 50%;
    left: 25%;
    top: 25%;
    background-color: #3D3D3D;
    box-shadow: -2px 3px 20px #888888;
    overflow-y: scroll;
}

legend {
    font-weight: bold;
}

fieldset {
    display: inline-block;
    border-color: #86C67C;
}

table {
    width: 100%;
}

table, th {
    border: 1px solid #86C67C;
    border-collapse: collapse;
    color: white;
}

th {
    font-size: 1.5em;
}

td {
    border-right: 1px solid #86C67C;
    border-collapse: collapse;
    text-align: right;
}


tr:nth-child(even) {
    background-color: #787878;
}

